--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,11 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "axios": "^0.16.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14",
-    "axios": "^0.16.2"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.0.14"
   },
   "scripts": {
     "start": "react-scripts start",
