--- a/package.json
+++ b/package.json
@@ -19,9 +19,15 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
+    "express-flash-messages": "^0.1.1",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.3.0",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.5",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react-awesome-modal": "^2.0.5",
     "yarn": "^1.10.1"
   }
