--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "mongoose": "^5.3.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "react-awesome-modal": "^2.0.5",
-    "yarn": "^1.10.1"
+    "react-awesome-modal": "^2.0.5"
   }
 }
