--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
+    "htmlparser2": "^3.10.0",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.5",
     "react-awesome-modal": "^2.0.5",
